# optimization

./: README.md  makefile  pyproject.toml
src/: derivative.py  gradient_descent.py  plotting.py
src/linear_programming/: lp01.py
src/problems/: p001.py  p002.py
