[tool.poetry]
name = "optimization"
version = "0.1.0"
description = "Notes and implementation about/of optimization algorithms"
authors = [ "Benjamin Labrecque," ]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
sympy = "^1.14.0"
cvxpy = "^1.7.3"
ipython = "<9.0.0"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.12.0"
# Supposedly quite fast, but need to figure out how to make it work with Neovim
ruff = "^0.1.5"
black = "<24.0.0"


[tool.mypy]
files = "src"
strict = true
namespace_packages = true
explicit_package_bases = true

# [tool.isort]
# profile = "black"

[tool.ruff.lint]
select = [
    # pycodestyle
    # "E",
    # Pyflakes
    # "F",
    # pyupgrade
    # "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
fixable = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
